helios-library-app/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Middle_School__c</fullName>
        <formula>Year_Entered_Expected_Middle_School__c &lt; YEAR(TODAY()) || 
(Year_Entered_Expected_Middle_School__c = YEAR(TODAY()) &amp;&amp; MONTH(TODAY()) &gt; 8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Middle School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Email_1__c</fullName>
        <inlineHelpText>The email address of one parent.</inlineHelpText>
        <label>Parent Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Email_2__c</fullName>
        <inlineHelpText>The email of a second parent.</inlineHelpText>
        <label>Parent Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>YA_Notification_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For students not yet in middle school (5th grade +), checking this notifies the parents when students check out a book in the YA section. Note that this field has no effect for students in middle school.</inlineHelpText>
        <label>YA Notification Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Entered_Expected_Middle_School__c</fullName>
        <inlineHelpText>Enter the year the student entered middle school (5th grade), or for those students not in middle school, enter the year (in the future) the student is expected to enter 5th grade.</inlineHelpText>
        <label>Year Entered/Expected Middle School</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>